# telegram-nas-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.docker.example.yaml  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
src/tg_nas_downloader/: cli.py  config.py  db.py  downloader.py  network.py  xray.py
