[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-nas-downloader"
version = "0.1.0"
description = "Download videos from Telegram groups/channels to a NAS folder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.2",
    "python-socks[asyncio]>=2.7",
    "telethon>=1.43,<2",
]

[project.scripts]
telegram-nas = "tg_nas_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/Gavin-LHX/telegram-nas-downloader"
Repository = "https://github.com/Gavin-LHX/telegram-nas-downloader"

[tool.setuptools.packages.find]
where = ["src"]
